Swap old logging approach for ActiveSupport::Notifications. This makes it easier for users to use this gem without logging, and also to use instrumentation data for things beyond logging (e.g. monitoring tools). Inspired by http://www.railstips.org/blog/archives/2013/01/23/an-instrumented-library-in-30-lines/ and https://github.com/jnunemaker/cassanity.
Public API is basically the same between ActiveSupport versions 3 and 4,
so this interface should work with both versions.

Run CI for ActiveSupport ~> 3.2 and ~> 4.0

Closes #13

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: ruby
 rvm:
-  - 2.2.3
+  - 2.1
+  - 2.2
 script: bundle exec rspec --tag ~'type:integration'
+matrix:
+  include:
+    - rvm: 2.2
+      gemfile: Gemfiles/Gemfile.as3.2
+    - rvm: 2.2
+      gemfile: Gemfiles/Gemfile.as4.0
